2004-12-12  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_persistent_server_keys.at: New test.
	* testsuite.at: Call it.
	* tests/t_persistent_server_revision.at: Fix typo.

2004-12-12  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_persistent_server_revision.at: New test.
	* testsuite.at: Call it.  Tweak NETSYNC macros in support of it.

2004-12-11  Nathaniel Smith  <njs@codesourcery.com>

	* lua.hh (add_rcfile): Add 'required' argument.
	* lua.cc (add_rcfile): Implement it.  Simplify error checking
	logic while I'm there...
	* monotone.cc (cpp_main): Pass new argument to add_rcfile.
	
	* tests/t_rcfile_required.at: New test.
	* testsuite.at: Call it.
	Revamp netsync support macros, to allow long-running servers.
	Make netsync-killer try first with -TERM, in case that plays nicer
	with gcov.
	
2004-12-11  Nathaniel Smith  <njs@codesourcery.com>

	* lua.hh: Remove tabs.

2004-12-11  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi: Document explicit_merge.
	
2004-12-11  Nathaniel Smith  <njs@codesourcery.com>

	* Makefile.am: Redo full-revision support again, to properly
	handle 'make dist' and caching.  Hopefully.

2004-12-11  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (File Attributes): Rewrite for new .mt-attrs
	syntax.

2004-12-11  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_attr.at: New test.
	* testsuite.at: Call it.

2004-12-11  Nathaniel Smith  <njs@codesourcery.com>

	* commands.cc (trusted): Print spaces between key ids.

	* lua.cc (add_rcfile): Errors while loading a user-provided rc
	file are naughtiness, not oopses.
	
2004-12-11  Nathaniel Smith  <njs@codesourcery.com>

	* commands.cc (commands::explain_usage): Use split_into_lines to
	do formatting of per-command usage; allow multi-line
	descriptions.
	(trusted): New command.
	* monotone.texi (Key and Cert): Document 'trusted' command.
	* tests/t_trusted.at: New test.
	* testsuite.at: Change get_revision_cert_trust to support